Add Possible Changes

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@google/generative-ai": "^0.24.0",
     "@mui/material": "^6.3.1",
     "@reduxjs/toolkit": "^2.3.0",
     "@sentry/react": "^8.47.0",
@@ -17,7 +18,11 @@
     "@tinymce/tinymce-react": "^5.1.1",
     "@uploadcare/blocks": "^0.50.4",
     "axios": "^1.7.9",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
+    "express": "^5.1.0",
     "mdb-react-ui-kit": "^9.0.0",
     "particles-bg": "^2.5.5",
     "prismjs": "^1.30.0",
